--- a/AppsServicios/templates/AppsServicios/plantilla_base.html
+++ b/AppsServicios/templates/AppsServicios/plantilla_base.html
@@ -27,9 +27,10 @@
         <!-- Navigation-->
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
-                <a class="navbar-brand" href=>Inicio</a>
+                <a class="navbar-brand" href="{% url 'inicio' %}">Inicio</a>
+                <a class="navbar-brand" href="{% url 'tecnologias' %}">Tecnologias</a>
+                <a class="navbar-brand" href="{% url 'contactos' %}">Contactos</a>
                 <a class="navbar-brand" href=>Servicios</a>
-                <a class="navbar-brand" href=>Tecnologias</a>
             </div>
         </nav>
 
