Botones paara los formularios

--- a/AppsServicios/templates/AppsServicios/lista_tecnologias.html
+++ b/AppsServicios/templates/AppsServicios/lista_tecnologias.html
@@ -1,56 +1,13 @@
-{% extends "AppCoder/plantilla_base.html" %}
-
-{% block style_block %}
-<style>
-  table.coder-table {
-    border:3px solid;
-  }
-  th,
-  td {
-    border:1px solid;
-    padding:5px 10px;
-  }
-</style>
-{% endblock style_block %}
+{% extends "AppsServicios/plantilla_base.html" %}
 
 {% block contenido_base %}
 
-<h1>tecnologias</h1>
-<a href=>Crear tecnologia!</a>
-<br>
-<a href=>Buscar tecnologia</a>
+<h1>Lista de tecnologias</h1>
 
-<br><br>
-<h3>tecnologias:</h3>
-
-<table class="coder-table">
-  <tbody>
-    <tr>
-      <th>
-        <strong>Nombre</strong>
-      </th>
-      <th>
-        <strong>Comision</strong>
-      </th>
-    </tr>
-    {% for tecnologia in tecnologias %}
-    <tr>
-      <td>{{tecnologias.nombre}}</td>
-      <td>{{tecnologias.version}}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+<a href="{% url 'tecnologia_formulario' %}">Nueva_Tecnologia</a>
 
 {% endblock contenido_base %}
 
-<!--{% extends "AppsServicios/plantilla_base.html" %}
-
-{% block contenido_base %}
-
-Lista de tecnologias:
-    {% for tecnologias in AppsServicios %}
+<!--   {% for tecnologias in AppsServicios %}
     <p>{{ tecnologias.nombre }}</p>
-    {% endfor %}
-
-{% endblock contenido_base %}
+    {% endfor %}--> 
