--- a/AppsServicios/templates/AppsServicios/plantilla_base.html
+++ b/AppsServicios/templates/AppsServicios/plantilla_base.html
@@ -30,7 +30,7 @@
                 <a class="navbar-brand" href="{% url 'inicio' %}">Inicio</a>
                 <a class="navbar-brand" href="{% url 'tecnologias' %}">Tecnologias</a>
                 <a class="navbar-brand" href="{% url 'contactos' %}">Contactos</a>
-                <a class="navbar-brand" href=>Servicios</a>
+                <a class="navbar-brand" href="{% url 'servicios' %}">Servicios</a>
             </div>
         </nav>
 
