--- a/AppsServicios/templates/AppsServicios/lista_servicios.html
+++ b/AppsServicios/templates/AppsServicios/lista_servicios.html
@@ -1,56 +1,10 @@
-{% extends "AppCoder/plantilla_base.html" %}
-
-{% block style_block %}
-<style>
-  table.coder-table {
-    border:3px solid;
-  }
-  th,
-  td {
-    border:1px solid;
-    padding:5px 10px;
-  }
-</style>
-{% endblock style_block %}
+{% extends "AppsServicios/plantilla_base.html" %}
 
 {% block contenido_base %}
 
-<h1>servicios</h1>
-<a href=>Crear servicios!</a>
-<br>
-<a href=>Buscar servicios</a>
+<h1>Lista de Servicios</h1>
 
-<br><br>
-<h3>servicios:</h3>
+<a href="{% url 'servicio_formulario' %}">Nuevo_Servicio</a>
 
-<table class="coder-table">
-  <tbody>
-    <tr>
-      <th>
-        <strong>Nombre</strong>
-      </th>
-      <th>
-        <strong>tiempo</strong>
-      </th>
-    </tr>
-    {% for servicio in servicios %}
-    <tr>
-      <td>{{servicios.nombre}}</td>
-      <td>{{servicios.version}}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
-
-{% endblock contenido_base %}
-
-<!--{% extends "AppsServicios/plantilla_base.html" %}
-
-{% block contenido_base %}
-
-Lista de tecnologias:
-    {% for tecnologias in AppsServicios %}
-    <p>{{ tecnologias.nombre }}</p>
-    {% endfor %}
 
 {% endblock contenido_base %}
