--- a/AppsServicios/templates/AppsServicios/Inicio.html
+++ b/AppsServicios/templates/AppsServicios/Inicio.html
@@ -2,6 +2,22 @@
 
 {% block style_block %}
 
-Bienvenidos a la empresa de servicios tecnologicos "Apps Services"
-
+                <!-- Masthead-->
+                <header class="masthead">
+                    <div class="container position-relative">
+                        <div class="row justify-content-center">
+                            <div class="col-xl-6">
+                                <div class="text-center text-white">
+                                    <!-- Page heading-->
+                                    <h1 class="mb-5">Bienvenidos a la empresa de servicios tecnologicos "Apps Services"</h1>
+                                    <!-- Signup form-->
+                                    <!-- * * * * * * * * * * * * * * *-->
+                                    <!-- * * SB Forms Contact Form * *-->
+                                    <!-- * * * * * * * * * * * * * * *-->
+                                    <!-- This form is pre-integrated with SB Forms.-->
+                                    <!-- To make this form functional, sign up at-->
+                                    <!-- https://startbootstrap.com/solution/contact-forms-->
+                                    <!-- to get an API token!-->
+                                    <form class="form-subscribe" id="contactForm" data-sb-form-api-token="API_TOKEN">
+                                
 {% endblock style_block %}
