--- a/AppsServicios/templates/AppsServicios/contactos.html
+++ b/AppsServicios/templates/AppsServicios/contactos.html
@@ -3,8 +3,24 @@
 
 {% block contenido_base %}
 
-<h1>Contactos Principales</h1>
+               <!-- Masthead-->
+               <header class="masthead">
+                <div class="container position-relative">
+                    <div class="row justify-content-center">
+                        <div class="col-xl-6">
+                            <div class="text-center text-white">
+                                <!-- Page heading-->
+                                <h1 class="mb-5">"Lista de contactos"</h1>
+                                <!-- Signup form-->
+                                <!-- * * * * * * * * * * * * * * *-->
+                                <!-- * * SB Forms Contact Form * *-->
+                                <!-- * * * * * * * * * * * * * * *-->
+                                <!-- This form is pre-integrated with SB Forms.-->
+                                <!-- To make this form functional, sign up at-->
+                                <!-- https://startbootstrap.com/solution/contact-forms-->
+                                <!-- to get an API token!-->
+                                <form class="form-subscribe" id="contactForm" data-sb-form-api-token="API_TOKEN">
 
-<a href="{% url 'contacto_formulario' %}">Nuevo_Contacto</a>
+<a href="{% url 'contacto_formulario' %}"><h1>Nuevo_Contacto</h1></a>
 
 {% endblock contenido_base %}
