--- a/AppsServicios/templates/AppsServicios/lista_servicios.html
+++ b/AppsServicios/templates/AppsServicios/lista_servicios.html
@@ -1,10 +1,25 @@
 {% extends "AppsServicios/plantilla_base.html" %}
 
 {% block contenido_base %}
+ <!-- Masthead-->
+ <header class="masthead">
+    <div class="container position-relative">
+        <div class="row justify-content-center">
+            <div class="col-xl-6">
+                <div class="text-center text-white">
+                    <!-- Page heading-->
+                    <h1 class="mb-5">"Lista de Servicios"</h1>
+                    <!-- Signup form-->
+                    <!-- * * * * * * * * * * * * * * *-->
+                    <!-- * * SB Forms Contact Form * *-->
+                    <!-- * * * * * * * * * * * * * * *-->
+                    <!-- This form is pre-integrated with SB Forms.-->
+                    <!-- To make this form functional, sign up at-->
+                    <!-- https://startbootstrap.com/solution/contact-forms-->
+                    <!-- to get an API token!-->
+                    <form class="form-subscribe" id="contactForm" data-sb-form-api-token="API_TOKEN">
 
-<h1>Lista de Servicios</h1>
-
-<a href="{% url 'servicio_formulario' %}">Nuevo_Servicio</a>
+<a href="{% url 'servicio_formulario' %}"><h1>Nuevo_Servicio</h1></a>
 
 
 {% endblock contenido_base %}
