Entrega intermedia del proyecto final Y.Gonzalez

--- a/AppsServicios/templates/AppsServicios/Inicio.html
+++ b/AppsServicios/templates/AppsServicios/Inicio.html
@@ -2,6 +2,10 @@
 
 {% block style_block %}
 
+{% if exitoso %}
+<div style="background-color:antiquewhite;"><h4>La información fue agregada!!!</h4></div>
+{% endif %}
+
                 <!-- Masthead-->
                 <header class="masthead">
                     <div class="container position-relative">
