--- a/AppsServicios/templates/AppsServicios/lista_tecnologias.html
+++ b/AppsServicios/templates/AppsServicios/lista_tecnologias.html
@@ -23,9 +23,9 @@
 <a href="{% url 'tecnologia_formulario' %}"><h1>Nueva_Tecnologia</h1></a>
 <a href="{% url 'busqueda_tecnologia_form' %}"><h1>Buscar_Tecnologia</h1></a>
 
-{% for tecnologias in tecnologia %}
-<span>{{tecnologia.nombre}}</span>
-
+<h1>Lista de tecnologias:</h1>
+{% for tecnologia in AppsServicios %}
+<p>{{tecnologia.nombre}}</p>
 {% endfor %}
 
 {% endblock contenido_base %}
