Entrega final con lista de codatos por pantalla

--- a/AppsServicios/templates/AppsServicios/lista_servicios.html
+++ b/AppsServicios/templates/AppsServicios/lista_servicios.html
@@ -1,5 +1,6 @@
 {% extends "AppsServicios/plantilla_base.html" %}
 
+
 {% block contenido_base %}
  <!-- Masthead-->
  <header class="masthead">
@@ -21,9 +22,10 @@
 
 <a href="{% url 'servicio_formulario' %}"><h1>Nuevo_Servicio</h1></a>
 
-<h1>Lista de servicios:</h1>
-{% for servicio in AppsServicios %}
+
+{% for servicio in servicio %}
 <p>{{servicio.nombre}}</p>
+
 {% endfor %}
 
 {% endblock contenido_base %}
