--- a/AppsServicios/templates/AppsServicios/lista_tecnologias.html
+++ b/AppsServicios/templates/AppsServicios/lista_tecnologias.html
@@ -23,8 +23,8 @@
 <a href="{% url 'tecnologia_formulario' %}"><h1>Nueva_Tecnologia</h1></a>
 <a href="{% url 'busqueda_tecnologia_form' %}"><h1>Buscar_Tecnologia</h1></a>
 
-<h1>Lista de tecnologias:</h1>
-{% for tecnologia in AppsServicios %}
+
+{% for tecnologia in tecnologia %}
 <p>{{tecnologia.nombre}}</p>
 {% endfor %}
 
