Boton de Editar y Eliminar en tecnologias

--- a/AppsServicios/templates/AppsServicios/plantilla_base.html
+++ b/AppsServicios/templates/AppsServicios/plantilla_base.html
@@ -27,6 +27,7 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href="{% url 'inicio' %}">Inicio</a>
+                <a class="navbar-brand" href="{% url 'tecnologias' %}">Acerca de Apps Services</a>
                 <a class="navbar-brand" href="{% url 'tecnologias' %}">Tecnologias</a>
                 <a class="navbar-brand" href="{% url 'contactos' %}">Contactos</a>
                 <a class="navbar-brand" href="{% url 'servicios' %}">Servicios</a>
