--- a/AppsServicios/templates/AppsServicios/lista_tecnologias.html
+++ b/AppsServicios/templates/AppsServicios/lista_tecnologias.html
@@ -1,6 +1,7 @@
 {% extends "AppsServicios/plantilla_base.html" %}
 
 {% block contenido_base %}
+
           <!-- Masthead-->
           <header class="masthead">
             <div class="container position-relative">
@@ -8,28 +9,51 @@
                     <div class="col-xl-6">
                         <div class="text-center text-white">
                             <!-- Page heading-->
-                            <h1 class="mb-5">"Lista de tecnologias"</h1>
+                            <h2 class="mb-4">Lista de tecnologias disponibles:</h2>
                             <!-- Signup form-->
                             <!-- * * * * * * * * * * * * * * *-->
                             <!-- * * SB Forms Contact Form * *-->
                             <!-- * * * * * * * * * * * * * * *-->
                             <!-- This form is pre-integrated with SB Forms.-->
                             <!-- To make this form functional, sign up at-->
-                            <!-- https://startbootstrap.com/solution/contact-forms-->
+                            <!-- https://startbootstrap.com/solution/contact-forms tecnologia.id-->
                             <!-- to get an API token!-->
                             <form class="form-subscribe" id="contactForm" data-sb-form-api-token="API_TOKEN"--> 
+                              
 
+{% if borrado %}
 
-<a href="{% url 'tecnologia_formulario' %}"><h1>Nueva_Tecnologia</h1></a>
-<a href="{% url 'busqueda_tecnologia_form' %}"><h1>Buscar_Tecnologia</h1></a>
+<div class="eliminado">Fue borrado exitosamente la tecnologia Id: {{ borrado }}</div>
 
+{% endif %}   
 
-{% for tecnologia in tecnologia %}
-<p>{{tecnologia.nombre}}</p>
-{% endfor %}
+<a href="{% url 'busqueda_tecnologia_form' %}"><h3>Buscar_Tecnologia</h3></a>
 
-{% endblock contenido_base %}
+<section class="tabla text-center">
+    <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th scope="col">Nombre</th>
+            <th scope="col">Version</th>
+            <th scope="col">Eliminar</th>
+            <th scope="col">Editar</th>
+          </tr>
+        </thead>
 
-<!--   {% for tecnologias in AppsServicios %}
-    <p>{{ tecnologias.nombre }}</p>
-    {% endfor %} {{tecnologia.version}}
+      {% for tecnologia in tecnologia %}
+      <tr>
+        <td>{{tecnologia.nombre}}</td>
+        <td>{{tecnologia.version}}</td>
+        <td><a href="{% url 'eliminar_tecnologia' tecnologia.id %}">Eliminar</a></td>
+        <td><a href="{% url 'editar_tecnologia' tecnologia.id %}">Editar</a></td>
+      </tr>
+      {% endfor %}
+
+    </tbody>    
+  </table>
+</section>
+
+<h3 class="mb-5">Para agregar hacer click aquí</h3>
+<a href="{% url 'tecnologia_formulario' %}"><h3>Nueva_Tecnologia</h3></a>
+
+{% endblock contenido_base %}    
