--- a/AppsServicios/templates/AppsServicios/lista_servicios.html
+++ b/AppsServicios/templates/AppsServicios/lista_servicios.html
@@ -9,7 +9,6 @@
             <div class="col-xl-6">
                 <div class="text-center text-white">
                     <!-- Page heading-->
-                    <h1 class="mb-5">"Lista de Servicios"</h1>
                     <!-- Signup form-->
                     <!-- * * * * * * * * * * * * * * *-->
                     <!-- * * SB Forms Contact Form * *-->
@@ -20,12 +19,45 @@
                     <!-- to get an API token!-->
                     <form class="form-subscribe" id="contactForm" data-sb-form-api-token="API_TOKEN">
 
+ {% if borrado %}
+
+ <div class="eliminado">Fue borrado exitosamente el contacto Id: {{ borrado }}</div>
+                      
+ {% endif %}
+
+<h1 class="mb-5">Lista de Servicios </h1>
+
 <a href="{% url 'servicio_formulario' %}"><h1>Nuevo_Servicio</h1></a>
 
 
-{% for servicio in servicio %}
-<p>{{servicio.nombre}}</p>
+<section class="tabla text-center">
+    <table class="table table-bordered">
+        <thead>
+          <tr>
 
+            <th scope="col">Nombre</th>
+            <th scope="col">Costo</th>
+            <th scope="col">Tiempo</th>
+            <th scope="col">Editar</th>
+            <th scope="col">Eliminar</th>
+          </tr>
+        </thead>
+
+{% for servicio in servicio %}
+<tr>
+
+<td>{{servicio.nombre}}</td>
+<td>{{servicio.valor}}</td>
+<td>{{servicio.tiempo}}</td>
+
+<td><a href="{% url 'editar_servicio' servicio.id %}">Editar</a></td>
+<td><a href="{% url 'eliminar_servicio' servicio.id %}">Eliminar</a></td>
+
+</tr>
 {% endfor %}
+
+</tbody>    
+</table>
+</section>
 
 {% endblock contenido_base %}
